# Rust-Fibonacci-REST-Kubernetes-Prometheus-Grafana

./: .dockerignore  .gitignore  AUTH_README.md  AUTH_TESTING_SCRIPTS.md  Cargo.toml  Dockerfile  KUBERNETES_AUTH_GUIDE.md  MODERNIZATION_RECOMMENDATIONS.md  Makefile  QUICK_AUTH_SETUP.md  README.md  TERRAFORM_RBAC_CONFIG.md  grafana-dashboard.json  grafana-setup.bat  main.tf  variables.tf
.github/workflows/: rust.yml
fibonacci/: Chart.yaml  values.yaml
fibonacci/templates/: NOTES.txt  configmap-log4rs.yaml  deployment.yaml  grafana-deployment.yaml  grafana-service.yaml  hpa.yaml  ingress.yaml  otel-collector-config.yaml  otel-collector-deployment.yaml  otel-collector-service.yaml  prometheus-config.yaml  prometheus-deployment.yaml  prometheus-service.yaml  resource-quota-pod.yaml  service.yaml  serviceaccount.yaml
src/: fibonacci.rs  main.rs  main.rs.backup  measure_time.rs  test_fib.rs  test_measure_time.rs
static/: index.html
tests/: test_fib.rs  test_measure_time.rs
