[package]
name = "fibonacci"
version = "0.1.0"
edition = "2021"

[lib]
name = "fibonacci"
path = "src/fibonacci.rs"

[dependencies]
actix-web = "4.0"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-files = "0.6"
common_failures = "0.2.0"
failure = "0.1.8"
futures-util = "0.3.31"
log = "0.4.22"
env_logger = "0.11.6"
log4rs = "1.0"
prometheus = "0.13"