[package]
name = "fibonacci"
version = "0.1.0"
edition = "2021"

[lib]
name = "fibonacci"
path = "src/fibonacci.rs"

[dependencies]
actix-web = "4.12"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-files = "0.6"
log = "0.4.22"
env_logger = "0.11.6"
log4rs = "1.0"
prometheus = "0.14"
tokio = { version = "1", features = ["full"] }
tokio-cron-scheduler = "0.13.0"
chrono = "0.4.39"
thiserror = "2.0"